# porous-topography-generator

./: .gitignore  .gitmodules  README.md  ice9.py  pyproject.toml  regrid_bedmachine.py  topo_regrid.py
regrid/: cli.py  ice9.py  kernel.py  output_utils.py  regrid_bedmachine.py  roughness.py  sunken_iceshelf.py  tile_utils.py  topo_regrid.py  write_files.py
src/ptopo/: cli.py  kernel.py  logging_utils.py  north_pole.py  output_utils.py  sunken_iceshelf.py  tile_utils.py  topo_regrid.py
src/ptopo/cli/: __main__.py  main.py  masking.py  regrid.py  sunken_iceshelf.py
src/ptopo/iceshelf/: sunken_iceshelf.py
src/ptopo/masking/: ice9.py  mask_uv.py
src/ptopo/regrid/: configs.py  domain.py  domain_mask.py  kernel.py  north_pole.py  roughness.py  tile_utils.py  topo_regrid.py
tests/: test_tile_utils.py
