[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "porous-topography-generator"
version = "0.1.0"
description = "regridding topography tools"
authors = [{ name = "He Wang", email = "hewang@ucar.edu" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[project.scripts]
ptopo = "regrid.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["regrid*"]
